[gd_scene load_steps=7 format=3 uid="uid://c7ghrp6e6f8fw"]

[ext_resource type="Script" uid="uid://bweayf6m5qsch" path="res://stickman_character_body_2d.gd" id="1_iu0mg"]
[ext_resource type="Script" uid="uid://dkfhnh3ps2uld" path="res://stickman_visualizer.gd" id="2_xlwhs"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_iu0mg"]

[sub_resource type="SkeletonModification2DPhysicalBones" id="SkeletonModification2DPhysicalBones_iu0mg"]
physical_bone_chain_length = 2
fetch_bones = null
joint_0_nodepath = NodePath("PhysicalHip2D")
joint_1_nodepath = NodePath("PhysicalHip2D/PhysicalTorso")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_xlwhs"]
enabled = true
modification_count = 1
modifications/0 = SubResource("SkeletonModification2DPhysicalBones_iu0mg")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iu0mg"]
size = Vector2(12, 34)

[node name="Player" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_iu0mg")
script = ExtResource("1_iu0mg")

[node name="Skeleton2D" type="Skeleton2D" parent="RigidBody2D"]
modification_stack = SubResource("SkeletonModificationStack2D_xlwhs")

[node name="PhysicalHip2D" type="PhysicalBone2D" parent="RigidBody2D/Skeleton2D"]
bone2d_nodepath = NodePath("../Hip")
bone2d_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Skeleton2D/PhysicalHip2D"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_iu0mg")

[node name="PhysicalTorso" type="PhysicalBone2D" parent="RigidBody2D/Skeleton2D/PhysicalHip2D"]
bone2d_nodepath = NodePath("../../Hip/RightLeg/RightShin")
bone2d_index = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Skeleton2D/PhysicalHip2D/PhysicalTorso"]
position = Vector2(1, 45)
shape = SubResource("RectangleShape2D_iu0mg")

[node name="PinJoint2D" type="PinJoint2D" parent="RigidBody2D/Skeleton2D/PhysicalHip2D/PhysicalTorso"]
node_a = NodePath("../..")
node_b = NodePath("..")

[node name="Hip" type="Bone2D" parent="RigidBody2D/Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="LeftLeg" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip"]
position = Vector2(-16, 32)
rest = Transform2D(1, 0, 0, 1, -16, 32)

[node name="LeftShin" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/LeftLeg"]
visible = false
position = Vector2(-3, 40)
rest = Transform2D(1, 0, 0, 1, -3, 40)

[node name="RightLeg" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip"]
position = Vector2(16, 32)
rest = Transform2D(1, 0, 0, 1, 16, 32)

[node name="RightShin" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/RightLeg"]
visible = false
position = Vector2(3, 40)
rest = Transform2D(1, 0, 0, 1, 3, 40)

[node name="Torso" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip"]
position = Vector2(0, -44)
rest = Transform2D(1, 0, 0, 1, 0, -50)

[node name="Head" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/Torso"]
visible = false
position = Vector2(0, -22)
rest = Transform2D(1, 0, 0, 1, 0, -22)

[node name="LeftArm" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/Torso"]
position = Vector2(-20, 17)
rest = Transform2D(1, 0, 0, 1, -20, 17)

[node name="LeftForearm" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/Torso/LeftArm"]
visible = false
position = Vector2(-8, 27)
rest = Transform2D(1, 0, 0, 1, -8, 27)

[node name="RightArm" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/Torso"]
position = Vector2(20, 17)
rest = Transform2D(1, 0, 0, 1, 20, 17)

[node name="RightForearm" type="Bone2D" parent="RigidBody2D/Skeleton2D/Hip/Torso/RightArm"]
visible = false
position = Vector2(8, 27)
rest = Transform2D(1, 0, 0, 1, 8, 27)

[node name="StickmanVisualizer" type="Node2D" parent="RigidBody2D"]
position = Vector2(1, 17)
script = ExtResource("2_xlwhs")
